--- a/assets/css/tooltips.css
+++ b/assets/css/tooltips.css
@@ -1,15 +1,15 @@
-div.edd-bk-help {
+.edd-bk-help {
 	position: relative;
 	display: inline-block;
 	cursor: help;
 }
-	div.edd-bk-help i {
+	.edd-bk-help i {
 		color: #bbb;
 		font-size: 16px;
 		line-height: 1.5;
 		vertical-align: middle;
 	}
-	div.edd-bk-help div {
+	.edd-bk-help div {
 		display: none;
 		position: absolute;
 		top: -5px;
@@ -27,19 +27,19 @@ div.edd-bk-help {
 		box-shadow: 1px 2px 8px 2px rgba(0,0,0,0.4);
 		z-index: 10000;
 	}
-	div.edd-bk-help div hr {
+	.edd-bk-help div hr {
 		border-top: 0;
 		border-bottom: 1px solid #888;
 	}
-	div.edd-bk-help div code {
+	.edd-bk-help div code {
 		padding: 0 3px;
 		font-weight: bold;
 		border-radius: 2px;
 		border-bottom: 1px solid #ddd;
 	}
-	div.edd-bk-help i:hover {
+	.edd-bk-help i:hover {
 		color: #555;
 	}
-	div.edd-bk-help i:hover + div {
+	.edd-bk-help i:hover + div {
 		display: inline-block;
 	}
